--- a/tools/ovn_migration/tripleo_environment/playbooks/roles/tripleo-update/templates/generate-ovn-extras.sh.j2
+++ b/tools/ovn_migration/tripleo_environment/playbooks/roles/tripleo-update/templates/generate-ovn-extras.sh.j2
@@ -4,4 +4,5 @@ set -x
 cat > $HOME/ovn-extras.yaml << EOF
 parameter_defaults:
   OVNIntegrationBridge: "{{ ovn_bridge }}"
+  ForceNeutronDriverUpdate: true
 EOF
